<resources>
    <string name="app_name">rightsQuest</string>
    <string name="video">video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ready_to_get_some_super_powers">Ready to get some super powers</string>
    <string name="hello_harshit">Hello Student,</string>
    <string name="categories">Categories</string>
    <string name="stories">Stories</string>
    <string name="quiz">Quiz</string>
    <string name="games">Games</string>
    <string name="harshit">Harshit</string>
    <string name="_9872852447">9872852447</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="harshitrana637_gmail_com">harshitrana637@gmail.com</string>
    <string name="_16_06_2003">16/06/2003</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="face">face</string>
    <string name="thank_you_have_a_nice_day">Thank You, Have a nice day</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_login">login_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_splash">splashActivity</string>
    <string name="rights_quiest">Rights Quiest</string>
    <string name="kids_legal_adventure">Kids Legal Adventure</string>
    <string name="splash_screen_logo">splash_screen_logo</string>
    <string name="not_signed_in">Not Signed in ??</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LogIn</string>
    <string name="signup_">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="harshit_hint">Harshit</string>
    <string name="last_name">Last Name</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="rana">Rana</string>
    <string name="phone_number">Phone Number</string>
    <string name="_98xxxxxxxx">98xxxxxxxx</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="email_signup">Email</string>
    <string name="xxxx_gmail_com">xxxx_gmail_com</string>
    <string name="password_signup">Password</string>
    <string name="passoword_123">passoword@123</string>
    <string name="should_i_trust_or_not">Should I Trust or not ?</string>
    <string name="right_on_your_own_body">Right on your own body</string>
    <string name="go_to_quiz">go to quiz</string>
    <string name="storyname">storyname</string>
    <string name="rightname">rightname</string>
    <string name="should_i_trust_or_not_">Should I trust or not?</string>
    <string name="good_touch_bad_touch">(Good touch,Bad touch)</string>
    <string name="todo">TODO</string>
    <string name="ben_s_second_family">Ben\'s Second Family</string>
    <string name="nutrition_and_body">(Nutrition and Body)</string>
    <string name="todo2">TODO</string>
    <string name="unwanted_shadows">Unwanted Shadows</string>
    <string name="right_to_equality">(Right to equality)</string>
</resources>