<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="800dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:layout_width="564dp"
        android:layout_height="360dp"
        android:layout_marginStart="-55dp"
        android:layout_marginTop="-95dp"
        android:src="@drawable/photobackground" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="920dp"
        android:layout_marginTop="-35dp"
        android:src="@drawable/profilebackground"
        android:contentDescription="@string/face" />

    <ImageView
        android:layout_width="149dp"
        android:layout_height="149dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/faces" />

    <TextView
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="200dp"
        android:text="@string/harshit"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="italic|bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9872852447"
        android:layout_marginTop="270dp"
        android:layout_marginStart="190dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="270dp"
        android:layout_marginStart="50dp"
        android:textColor="#332F2F"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="330dp"
        android:text="@string/email"
        android:textColor="#332F2F"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harshitrana637_gmail_com"
        android:layout_marginTop="330dp"
        android:layout_marginStart="190dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:layout_marginTop="390dp"
        android:layout_marginStart="50dp"
        android:textColor="#332F2F"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_16_06_2003"
        android:layout_marginTop="390dp"
        android:layout_marginStart="190dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textStyle="bold"
        android:textColor="#332F2F"
        android:textSize="20sp"
        android:layout_marginTop="450dp"
        android:layout_marginStart="50dp"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="90dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="490dp"
        app:cardBackgroundColor="#B0E6B9"
        app:cardCornerRadius="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_have_a_nice_day"
        android:layout_marginTop="730dp"

        android:layout_marginStart="130dp"
        />

</FrameLayout>