<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4D8D8"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="452dp"
        android:layout_height="484dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="381dp"
        android:layout_height="385dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#F6FDFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="#02B4B0"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="85dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:textColor="#02B4AC" />

        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:inputType="text"
            android:hint="Supermen@123"
            android:textColorHint="#737373"
            android:layout_marginTop="115dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:autofillHints="username" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="180dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:textColor="#02B4AC" />

        <ImageButton
            android:id="@+id/searchImageButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="265dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/signup"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="690dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="270dp"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="200dp"
            android:textColorHint="#737373"
            android:hint="****"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:autofillHints="password"
            android:inputType="text" />

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="313dp"
            android:backgroundTint="@color/white"
            android:text="@string/signup"
            android:layout_marginStart="210dp"
            android:textColor="#02B3AF"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="320dp"
            android:text="@string/not_signed_in" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>